grid de schedule

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
   <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans:300,400,700" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
+<link rel="stylesheet" href="./assets/libs/slick-1.8.1/slick/slick.css">
+  
   <!-- JS -->
-  <script src="./assets/js/main.js"></script>
+
 </head>
 
 <body>
@@ -18,7 +20,7 @@
         <img src="./assets/img/horarios-header.png" alt="Horarios">
       </header>
       <main>
-        <section id="hours-grid">
+        <section id="horas-grid">
           <div class="hour">
             <span class="maize">16.30</span>
           </div>
@@ -92,6 +94,25 @@
 
 
         <section id="schedule"> 
+          <div class="escenario violeta">
+            <div class="escenario-grid">
+              <div class="artista fresa-kill" data-artista="fresa-kill" data-horario="1630">
+                <div class="nombre">
+                  <p>FRESA KILL</p>
+                </div>
+                <div class="horario">
+                  <p>17.30 - 18.00</p>
+                </div>
+              </div>
+            </div>
+
+
+          </div>
+          <div class="escenario verde" style="color:green">
+            sarasasasaa
+
+
+          </div>
 
 
         
@@ -106,6 +127,17 @@
     </div>
   </div>
 
+
+
+
+
+  <!-- SCRIPTS -->
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="./assets/libs/slick-1.8.1/slick/slick.js"></script>
+
+<script src="./assets/js/main.js"></script>
 </body>
 
 </html>
