--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
   <title>GRL PWR</title>
   <!-- FONTS -->
-  <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans:300,400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans:300,400,700|Oswald" rel="stylesheet">
   <!-- CSS -->
   <link rel="stylesheet" href="./assets/css/style.css">
-<link rel="stylesheet" href="./assets/libs/slick-1.8.1/slick/slick.css">
-  
+  <link rel="stylesheet" href="./assets/libs/slick-1.8.1/slick/slick.css">
   <!-- JS -->
-
 </head>
 
 <body>
@@ -91,12 +89,10 @@
             <span class="maize">03.30</span>
           </div>
         </section>
-
-
-        <section id="schedule"> 
+        <section id="schedule">
           <div class="escenario violeta">
             <div class="escenario-grid">
-              <div class="artista fresa-kill" data-artista="fresa-kill" data-horario="1630">
+              <div class="artista fresa-kill">
                 <div class="nombre">
                   <p>FRESA KILL</p>
                 </div>
@@ -104,40 +100,131 @@
                   <p>17.30 - 18.00</p>
                 </div>
               </div>
+              <div class="artista femme-dargent">
+                <div class="nombre">
+                  <p>LA FEMME D'ARGENT</p>
+                </div>
+                <div class="horario">
+                  <p>19.10-19.40</p>
+                </div>
+              </div>
+              <div class="artista amazonas-crew">
+                <div class="nombre">
+                  <p>AMAZONAS CREW</p>
+                </div>
+                <div class="horario">
+                  <p>18.10-18.40</p>
+                </div>
+              </div>
+              <div class="artista ibiza-pareo">
+                <div class="nombre">
+                  <p>IBIZA PAREO</p>
+                </div>
+                <div class="horario">
+                  <p>20.10-20.40</p>
+                </div>
+              </div>
+              <div class="artista she-devils">
+                <div class="nombre">
+                  <p>SHE DEVILS</p>
+                </div>
+                <div class="horario">
+                  <p>21.10-21.50</p>
+                </div>
+              </div>
+              <div class="artista anita-tijoux">
+                <div class="nombre">
+                  <p>ANITA TIJOUX</p>
+                </div>
+                <div class="horario">
+                  <p>22.30-23.20</p>
+                </div>
+              </div>
+              <div class="artista marilina te-amo">
+                <div class="nombre">
+                  <p>MARILINA BERTOLDI</p>
+                </div>
+                <div class="horario">
+                  <p>00.20-01.20</p>
+                </div>
+              </div>
+              <div class="artista miss-bolivia">
+                <div class="nombre">
+                  <p>MISS BOLIVIA</p>
+                </div>
+                <div class="horario">
+                  <p>02.00-03.00</p>
+                </div>
+              </div>
             </div>
-
-
           </div>
-          <div class="escenario verde" style="color:green">
-            sarasasasaa
-
-
+          <div class="escenario verde">
+            <div class="escenario-grid">
+              <div class="artista hienas">
+                <div class="nombre">
+                  <p>HIENAS</p>
+                </div>
+                <div class="horario">
+                  <p>18.40-19.20</p>
+                </div>
+              </div>
+              <div class="artista las-ex">
+                <div class="nombre">
+                  <p>LAS EX</p>
+                </div>
+                <div class="horario">
+                  <p>19.40-20.10</p>
+                </div>
+              </div>
+              <div class="artista bimbo-custodio">
+                <div class="nombre">
+                  <p>BIMBO Y CUSTODIO</p>
+                </div>
+                <div class="horario">
+                  <p>20.10-21.10</p>
+                </div>
+              </div>
+              <div class="artista misssil">
+                <div class="nombre">
+                  <p>MI$$SIL</p>
+                </div>
+                <div class="horario">
+                  <p>21.50-22.30</p>
+                </div>
+              </div>
+              <div class="artista mami">
+                <div class="nombre">
+                  <p>MÄMI</p>
+                </div>
+                <div class="horario">
+                  <p>22.30-23.20</p>
+                </div>
+              </div>
+            </div>
           </div>
-
-
-        
+          <div class="escenario sofar">
+            <div class="escenario-grid">
+              <div class="artista panoramicas">
+                <div class="nombre">
+                  <p>PANORÁMICAS</p>
+                </div>
+                <div class="horario">
+                  <p>18.40-19.10</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
-
-
-        
       </main>
       <footer>
         <img src="/assets/img/footer-info.png" alt="">
       </footer>
     </div>
   </div>
-
-
-
-
-
   <!-- SCRIPTS -->
-
-
-<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="./assets/libs/slick-1.8.1/slick/slick.js"></script>
-
-<script src="./assets/js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="./assets/libs/slick-1.8.1/slick/slick.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
