escenarios verde, teatro, sofar y sum

--- a/index.html
+++ b/index.html
@@ -23,70 +23,73 @@
             <span class="maize">16.30</span>
           </div>
           <div class="hour">
-            <span class="purple">17</span>
+            <span class="purple">17.00</span>
           </div>
           <div class="hour">
             <span class="maize">17.30</span>
           </div>
           <div class="hour">
-            <span class="purple">18</span>
+            <span class="purple">18.00</span>
           </div>
           <div class="hour">
             <span class="maize">18.30</span>
           </div>
           <div class="hour">
-            <span class="purple">19</span>
+            <span class="purple">19.00</span>
           </div>
           <div class="hour">
             <span class="maize">19.30</span>
           </div>
           <div class="hour">
-            <span class="purple">20</span>
+            <span class="purple">20.00</span>
           </div>
           <div class="hour">
             <span class="maize">20.30</span>
           </div>
           <div class="hour">
-            <span class="purple">21</span>
+            <span class="purple">21.00</span>
           </div>
           <div class="hour">
             <span class="maize">21.30</span>
           </div>
           <div class="hour">
-            <span class="purple">22</span>
+            <span class="purple">22.00</span>
           </div>
           <div class="hour">
             <span class="maize">22.30</span>
           </div>
           <div class="hour">
-            <span class="purple">23</span>
+            <span class="purple">23.00</span>
           </div>
           <div class="hour">
             <span class="maize">23.30</span>
           </div>
           <div class="hour">
-            <span class="purple">00</span>
+            <span class="purple">00.00</span>
           </div>
           <div class="hour">
             <span class="maize">00.30</span>
           </div>
           <div class="hour">
-            <span class="purple">01</span>
+            <span class="purple">01.00</span>
           </div>
           <div class="hour">
             <span class="maize">01.30</span>
           </div>
           <div class="hour">
-            <span class="purple">02</span>
+            <span class="purple">02.00</span>
           </div>
           <div class="hour">
             <span class="maize">02.30</span>
           </div>
           <div class="hour">
-            <span class="purple">03</span>
+            <span class="purple">03.00</span>
           </div>
           <div class="hour">
             <span class="maize">03.30</span>
+          </div>
+          <div class="hour">
+            <span class="purple">04.00</span>
           </div>
         </section>
         <section id="schedule">
@@ -200,6 +203,38 @@
                   <p>22.30-23.20</p>
                 </div>
               </div>
+              <div class="artista sara-hebe">
+                <div class="nombre">
+                  <p>SARA HEBE</p>
+                </div>
+                <div class="horario">
+                  <p>23.20-00.20</p>
+                </div>
+              </div>
+              <div class="artista ms-nina">
+                <div class="nombre">
+                  <p>MS NINA</p>
+                </div>
+                <div class="horario">
+                  <p>01.20-02.00</p>
+                </div>
+              </div>
+              <div class="artista color">
+                <div class="nombre">
+                  <p>COLOR</p>
+                </div>
+                <div class="horario">
+                  <p>02.00-03.00</p>
+                </div>
+              </div>
+              <div class="artista kumbia-queers">
+                <div class="nombre">
+                  <p>KUMBIA QUEERS</p>
+                </div>
+                <div class="horario">
+                  <p>03.00-03.50</p>
+                </div>
+              </div>
             </div>
           </div>
           <div class="escenario sofar">
@@ -212,6 +247,94 @@
                   <p>18.40-19.10</p>
                 </div>
               </div>
+              <div class="artista piba-berreta">
+                <div class="nombre">
+                  <p>LA PIBA BERRETA</p>
+                </div>
+                <div class="horario">
+                  <p>19.40-20.10</p>
+                </div>
+              </div>
+              <div class="artista agua-florida">
+                <div class="nombre">
+                  <p>AGUA FLORIDA</p>
+                </div>
+                <div class="horario">
+                  <p>20.40-21.10</p>
+                </div>
+              </div>
+              <div class="artista html">
+                <div class="nombre">
+                  <p>HTML</p>
+                </div>
+                <div class="horario">
+                  <p>21.50-22.20</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="escenario teatro">
+            <div class="escenario-grid">
+              <div class="artista bimbotiquin">
+                <div class="nombre">
+                  <p>BIMBOTIQUÍN</p>
+                </div>
+                <div class="horario">
+                  <p>16.30-17.20</p>
+                </div>
+              </div>
+              <div class="artista ofelia-fernandez">
+                <div class="nombre">
+                  <p>OFELIA FERNANDEZ</p>
+                </div>
+                <div class="horario">
+                  <p>18.20-19.20</p>
+                </div>
+              </div>
+              <div class="artista rencati-mengolini">
+                <div class="nombre">
+                  <p>RENCATI MENGOLINI</p>
+                </div>
+                <div class="horario">
+                  <p>19.30-20.20</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="escenario sum">
+            <div class="escenario-grid">
+              <div class="artista autodefensa">
+                <div class="nombre">
+                  <p>AUTODEFENSA</p>
+                </div>
+                <div class="horario">
+                  <p>17.00-17.30</p>
+                </div>
+              </div>
+              <div class="artista twerk">
+                <div class="nombre">
+                  <p>TWERK</p>
+                </div>
+                <div class="horario">
+                  <p>18.00-18.30</p>
+                </div>
+              </div>
+              <div class="artista autodefensa2">
+                <div class="nombre">
+                  <p>AUTODEFENSA</p>
+                </div>
+                <div class="horario">
+                  <p>19.00-19.30</p>
+                </div>
+              </div>
+              <div class="artista twerk2">
+                  <div class="nombre">
+                    <p>TWERK</p>
+                  </div>
+                  <div class="horario">
+                    <p>20.00-20.30</p>
+                  </div>
+                </div>
             </div>
           </div>
         </section>
