--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <img src="./assets/img/horarios-header.png" alt="Horarios">
       </header>
       <main>
+        <section id="customDots"></section>
         <section id="horas-grid">
           <div class="hour">
             <span class="maize">16.30</span>
